Fixed padding and submenu toggle position on mobile mennu, submenu now only opens when toggle clicked and not parent link

--- a/content/themes/igcp/inc/scss/layout/drawers/drawer.scss
+++ b/content/themes/igcp/inc/scss/layout/drawers/drawer.scss
@@ -30,6 +30,11 @@
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
+  
+  @include break-min($md) {
+    padding-right: $gutter / 2;
+    padding-left: $gutter / 2;
+  }
 }
 
 .drw-Drawer_Close {
