--- a/content/themes/igcp/inc/scss/layout/navigation/_mobile.scss
+++ b/content/themes/igcp/inc/scss/layout/navigation/_mobile.scss
@@ -15,7 +15,12 @@
         text-decoration: none;
         color: currentColor;
         font-size: 22px;
-        padding: 20px;
+        padding: 20px #{$gutter / 4};
+
+        @include break-min($xs) {
+          padding-right: #{$gutter / 2};
+          padding-left: #{$gutter / 2};
+        }
       }
     }
 
@@ -27,16 +32,12 @@
         margin-right: -#{$gutter / 2};
         margin-left: -#{$gutter / 2};
       }
-      @include break-min($md) {
-        margin-right: -#{$gutter};
-        margin-left: -#{$gutter};
-      }
     }
 
     li.menu-item.menu-item-has-children {
       position: relative;
 
-      &::before {
+      &::after {
         content: "";
         display: block;
         width: 20px;
@@ -44,16 +45,20 @@
         border-left: 10px solid #fff;
         position: absolute;
         top: 25px;
-        right: 20px;
+        right: 15px;
         cursor: pointer;
 
         border-bottom: 10px solid transparent;
         border-top: 10px solid transparent;
         border-right: 10px solid transparent;
+
+        @include break-min($xs) {
+          right: 40px;
+        }
       }
 
       &.open {
-        &::before {
+        &::after {
           transform: rotate(90deg);
         }
       }
